# facehugger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.old.md  Dockerfile  README.md  facehugger.lock.schema.json  facehugger.schema.json  facehugger.yaml  pyproject.toml
facehugger/: facehugger.py  models.py
tests/: test_build_hf_command.py  test_help.py  test_load_manifest.py  test_main_entrypoint.py  test_version.py
tests/example-files/manifests/: facehugger.yaml
